Expand Mechanoid Specular docs (professional narrative) (#62)
* Expand Specular docs into a professional, diagram-led narrative.

Wire sbt-reload docsPreview, deepen Why/Overview/DSL/ladder pages, add Testing
and domain walkthroughs (document workflow, heartbeat, orders), and keep
Machine pictures rendered via mermoid so the site stays asserted and coherent.

* Show full machine context on each docs page example.

Put enums and assemblies inside Specular example thunks (or page-level scala
fences for large domain machines) so readers see complete definitions in the
rendered source panels, not only in DocSpec fixtures.

* Format docs sources for scalafmtCheckAll.